--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "build": "unbuild",
-    "format": "biome format --write ./"
+    "format": "biome format --write ./",
+    "pub": "changeset version && changeset publish"
   },
   "files": ["dist", "package.json"],
   "exports": {
@@ -18,6 +19,7 @@
     }
   },
   "dependencies": {
+    "@changesets/cli": "^2.28.1",
     "discord-api-types": "^0.37.119"
   },
   "devDependencies": {
