--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "register": "bun tools/registerCommands.ts"
   },
   "dependencies": {
+    "clawback": "^0.0.0",
     "discord-api-types": "^0.37.119",
     "discord-interactions": "^4.1.1",
     "hono": "^4.7.5"
